--- a/la-mia-pizzeria-static/la-mia-pizzeria-static.csproj
+++ b/la-mia-pizzeria-static/la-mia-pizzeria-static.csproj
@@ -8,7 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Shared\_LayoutPizzeria.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Shared\_LayoutPizzeria.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Shared\_LayoutPizzeria.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Shared\_LayoutPizzeria.cshtml" />
   </ItemGroup>
 
 </Project>
